tests/ui/offset-of/offset-of-private.stderr
error[E0603]: struct `Bar` is private
  --> $DIR/offset-of-private.rs:30:19
   |
LL |     offset_of!(m::Bar, public);
   |                   ^^^ private struct
   |
note: the struct `Bar` is defined here
  --> $DIR/offset-of-private.rs:14:5
   |
LL |     struct Bar {
   |     ^^^^^^^^^^

error[E0603]: struct `Bar` is private
  --> $DIR/offset-of-private.rs:31:19
   |
LL |     offset_of!(m::Bar, private);
   |                   ^^^ private struct
   |
note: the struct `Bar` is defined here
  --> $DIR/offset-of-private.rs:14:5
   |
LL |     struct Bar {
   |     ^^^^^^^^^^

error[E0616]: field `private` of struct `Foo` is private
  --> $DIR/offset-of-private.rs:27:24
   |
LL |     offset_of!(m::Foo, private);
   |                        ^^^^^^^ private field

error[E0616]: field `1` of struct `FooTuple` is private
  --> $DIR/offset-of-private.rs:29:29
   |
LL |     offset_of!(m::FooTuple, 1);
   |                             ^ private field

error[E0616]: field `private` of struct `Bar` is private
  --> $DIR/offset-of-private.rs:31:24
   |
LL |     offset_of!(m::Bar, private);
   |                        ^^^^^^^ private field

error[E0616]: field `private` of struct `Foo` is private
  --> $DIR/offset-of-private.rs:35:31
   |
LL |     offset_of!(m::Baz, Var1.0.private);
   |                               ^^^^^^^ private field

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0603, E0616.
For more information about an error, try `rustc --explain E0603`.
